--- a/css/styles.css
+++ b/css/styles.css
@@ -114,10 +114,121 @@ body{
 	font-size: 1em;
 	margin-right: 5px;
 }
+/*End Header section*/
 
+/*main content started*/
+
+.container .jumbotron{
+	border-radius: 5px;
+	box-shadow: 0 0 50px #3F0C1F;
+	border: 2px solid #3F0C1F;
+}
+
+#myskills-tile, #single-tile, #map-tile{
+     height: 250px;
+     width: 100%;
+     border: 2px solid #3F0C1F;
+     margin-bottom: 15px;
+     overflow: hidden;
+     position: relative;
+}
+
+#myskills-tile:hover, #single-tile:hover, #map-tile:hover{
+	box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#myskills-tile{
+	background: url("../data/skills.jpg") no-repeat;
+	background-position: center;
+}
+
+#single-tile{
+	background: url("../data/awards.jpg") no-repeat;
+	background-position: center;
+}
+
+/* To display the skills,awards on image at bottom*/
+#myskills-tile span, #single-tile span, #map-tile span{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 1.6em;
+	text-transform: uppercase;
+	background-color: #000;
+	color:#fff;
+	opacity: 0.8;
+}
+/*End home page*/
+
+/*MY skills page*/
+.catagory-tile{
+	position: relative;
+	border: 2px solid #3F0C1F;
+	overflow: hidden;
+	width: 300px;
+	height: 2 00px;
+	margin: 0 auto 15px;
+}
+
+.catagory-tile span{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	text-align: center;
+	font-size: 1.2em;
+	text-transform: uppercase;
+}
+
+.catagory-tile:hover{
+	box-shadow: 0 1px 5px 1px #cccccc;
+}
+
+#skills-catagories-title + div{
+	margin-bottom: 50px;
+}
+/*Footer Start*/
+.panel-footer{
+   margin-top: 30px;
+   padding-top: 35px;
+   padding-bottom: 30px;
+   background-color: #222;
+   border-top: 0;
+}
+
+.panel-footer div.row{
+	margin-bottom: 35px;
+}
+
+#hours, #address{
+	line-height: 2;
+}
+
+#hours > span, #address > span{
+  font-size: 1.3em;
+}
+
+#address p{
+	color: #557c3e; /*Green*/
+    font-size: .8em;
+    line-height: 1.8;
+}
+
+#testinomials{
+	font-style: italic;
+}
+#testinomials p:nth-child(2){
+	margin-top: 25px; 
+}
 
 /*For large device only*/
 @media(min-width: 1200px){
+.container .jumbotron{
+	background: url('../data/Capture1200.png') no-repeat;
+	height: 300px;
+ }
 
 }
 /*For medium device only*/
@@ -129,11 +240,20 @@ body{
 	    margin:5px 5px 5px 0px; 
      }
 
+    .container .jumbotron{
+	background: url('../data/Capture992.png') no-repeat;
+	height: 300px;
+}
+
 }
 
 /* For small device only */
 @media (min-width: 768px) and (max-width: 991px){
-
+   .jumbotron{
+	background: url('../data/Capture768.png') no-repeat;
+	padding: 0;
+	height: 300px;/*This will be according to the image height*/
+ }
 }
 
 /*For extra small device only*/
@@ -173,4 +293,38 @@ body{
      	letter-spacing: .1em;
      	text-transform: uppercase;
      }
+
+     /*Header section end*/
+     .container .jumbotron{ /*Added container to update padding*/
+     	margin: 20px;
+        padding: 0;
+     }
+/*To display the image correctly*/
+     #myskills-tile, #single-tile{
+     /*max-width: 360px;*/
+     max-width: 360px;
+     margin:0 auto 15px;
+     }
+     /*Footer start*/
+     .panel-footer section{
+     	margin-bottom: 30px;
+     	text-align: center;
+     }
+     .panel-footer section:nth-child(3){
+     	margin-bottom: 0;/**/
+     }
+
+     .panel-footer section hr{
+     	width: 50%;
+     }
+     /*End Footer*/
+}
+
+/*For extra small devices like iphone 4*/
+@media(max-width: 479px){
+	/*Header*/
+	.navbar-brand h1 {/*My Name*/
+         padding-top: 5px;
+         font-size: 6vw;
+	}
 }
