--- a/css/styles.css
+++ b/css/styles.css
@@ -226,7 +226,7 @@ body{
 /*For large device only*/
 @media(min-width: 1200px){
 .container .jumbotron{
-	background: url('../data/Capture1200.png') no-repeat;
+	background: url('./data/Capture1200.png') no-repeat;
 	height: 300px;
  }
 
@@ -241,7 +241,7 @@ body{
      }
 
     .container .jumbotron{
-	background: url('../data/Capture992.png') no-repeat;
+	background: url('./data/Capture992.png') no-repeat;
 	height: 300px;
 }
 
@@ -250,7 +250,7 @@ body{
 /* For small device only */
 @media (min-width: 768px) and (max-width: 991px){
    .jumbotron{
-	background: url('../data/Capture768.png') no-repeat;
+	background: url('./data/Capture768.png') no-repeat;
 	padding: 0;
 	height: 300px;/*This will be according to the image height*/
  }
