--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,9 @@ body{
 	text-align: center;
 	font-size: 1.2em;
 	text-transform: uppercase;
+	background-color: #000;
+	color:#fff;
+	opacity: 0.8;
 }
 
 .catagory-tile:hover{
