--- a/css/styles.css
+++ b/css/styles.css
@@ -196,11 +196,67 @@ body{
 /*My skills page end*/
 
 /*Single Catagory Start*/
- .skill-item-title{   /*Margin between Language name and details */
+
+ .skill-item-title {   /*Margin between Language name and details */
   margin-bottom: 25px;
  }
 
+.skill-item-title hr{
+   width: 80%;
+}
 
+.skills-item-title .skill-rating{
+	font-size: 1.1em;
+	text-align: right;
+	margin-top: -15px;
+	margin-right: -15px;
+
+}
+
+.skills-item-title .skill-rating span{
+	font-size: .6em;
+}
+
+
+.skill-item-photo{
+  position: relative;
+  border: 2px solid #3F0C1F;
+  overflow: hidden;
+  margin-right: -15px;
+  margin-left: auto;
+  margin-bottom: 20px;
+  max-width: 250px;
+}
+
+.skill-item-photo div{
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	width: 80px;
+	background-color: #557c3e;
+	text-align: center;
+}
+
+.skill-rating-desc {  /*This is for C lang.. desc*/
+   padding-right: 30px;  
+}
+
+h3.skill-item-title {
+	margin: 0 0 10px;
+}
+
+.skill-item-details {
+	font-size: .9em;
+	font-style: italic;
+}
+
+#skill-catagory-title + div{
+	margin-bottom: 50px;
+}
+
+.skills-item-title .row{
+	margin-bottom: 36px;
+}
 /*Single Catagory End*/
 /*Footer Start*/
 .panel-footer{
@@ -331,6 +387,19 @@ body{
      	width: 50%;
      }
      /*End Footer*/
+/*This is for single-catagory*/
+.skill-item-photo{
+	margin-right: auto;
+}
+
+.skills-item-title .skill-rating {
+	text-align: center;
+}
+
+.skill-rating-desc {
+	text-align: center;
+}
+
 }
 
 /*For extra small devices like iphone 4*/
